fixed invisible closing menu icon and text movement

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -12,6 +12,10 @@
     background-image: url(../images/icons/menu.svg);
   }
 
+  &--cross {
+    background-image: url(../images/icons/cross.svg);
+  }
+
   &--facebook {
     background-image: url(../images/icons/facebook.svg);
 
